# infinitely_basic_todo

./: .gitignore  CMakeLists.txt  README.md
include/: FileManager.hpp  TodoApplication.hpp  TodoList.hpp
include/utility/: CachedResult.hpp
src/: FileManager.cpp  TodoApplication.cpp  TodoList.cpp  main.cpp
